--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <version>0.0.1</version>
     <inceptionYear>2025</inceptionYear>
 
+    <properties>
+        <java-version>17</java-version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+    </properties>
+
     <licenses>
         <license>
             <name>MIT</name>
