--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,11 @@
             <artifactId>icu4j</artifactId>
             <version>77.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.14.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
